# NcCut

./: .gitignore  .readthedocs.yaml  BO_Tutorial.ipynb  CITATION.cff  CONTRIBUTING.md  INSTRUCTIONS.txt  ML_Tutorial_Part2_Phytoplankton.ipynb  README.md  REUSE.toml  cmaps.py  cutview.kv  cutview.py  dropdowns.py  filedisplay.py  functions.py  homescreen.py  imageview.py  instructions.txt  marker.py  markerwidth.py  multimarker.py  multitransect.py  nccut_config.toml  netcdfconfig.py  paper.bib  paper.md  plotpopup.py  pyproject.toml  singletransect.py  test_app.py  test_cases.py  test_functions.py  test_gui.py  test_kivyunit.py  unit_testing.py
.github/workflows/: publish-app.yml  python-app.yml
LICENSES/: BSD-3-Clause.txt
cutview/: CONTRIBUTING.md  paper.md  pyproject.toml
cutview/src/cutview/: __init__.py  cutview.py  dropdowns.py  filedisplay.py  functions.py  homescreen.py  marker.py  multimarker.py  multitransect.py  plotpopup.py
cutview/support/: requirements.txt
cutview/tests/: test_functions.py  test_gui.py
docs/: requirements.txt
docs/source/: conf.py  contribution.rst  cutview.rst  data_output.rst  example.rst  index.rst  installation.rst  nccut.rst  usage.rst
docs/source/_media/: NcCut_Example.html  NcCut_Example.ipynb
old_versions/: test_cases.py  test_kivyunit.py
src/cutview/: cutview.kv  cutview.py  dropdowns.py  filedisplay.py  functions.py  homescreen.py  logger.py  marker.py  markerwidth.py  multimarker.py  multitransect.py  netcdfconfig.py  plotpopup.py  project_file_printer.py  singletransect.py
src/nccut/: __init__.py  __main__.py  chain.py  chain_data_file_printer.py  dropdowns.py  filedisplay.py  functions.py  homescreen.py  inlinechain.py  interactiveplot.py  logger.py  marker.py  markerwidth.py  multichain.py  multiinlinechain.py  multimarker.py  multiorthogonalchain.py  multitransect.py  nccut.kv  nccut.py  netcdfconfig.py  orthogonalchain.py  orthogonalchainwidth.py  plotpopup.kv  plotpopup.py  plotwindow.kv  plotwindow.py  project_file_printer.py  settingsbar.py  singletransect.py
support/: example.json  example_markers.json  instructions.txt  project_example.json  project_file_printer.py  requirements.txt  test_cases.py  test_project_file.json
tests/: __init__.py  test_functions.py  test_gui.py
