[tool.poetry]
name = "nccut"
version = "0.4.7"
description = 'NcCut is a GUI for getting pixel data from images and data values from NetCDF files along linear transects.'
authors = ["rchartra <rchartra@uw.edu>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/rchartra/NcCut"
documentation = "https://nccut.readthedocs.io/en/latest/index.html"
keywords = ["NetCDF", "GUI"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
xarray = "^2024.6.0"
netCDF4 = "^1.7.1" # Necessary for xarray
Kivy = "^2.3.0"
progress = "^1.6"
plyer = "^2.1.0"
tomli = "^2.0.2"
pyobjus = {version = "^1.2.3", platform = "darwin"} # Necessary for native file browser on MacOS

[tool.poetry.group.test.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"
pooch = "^1.8.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-video = "^0.2.1"

[tool.poetry.scripts]
nccut = "nccut.__main__:run"

[[tool.poetry_bumpversion.replacements]]
files = ["docs/source/conf.py"]
search = "release = '{current_version}'"
replace = "release = '{new_version}'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
